--- a/home.css
+++ b/home.css
@@ -51,6 +51,7 @@ body {
   font-size: 3rem;
   font-weight: 400;
   line-height: 1.2125;
+  text-align: center;
   border-bottom: 5px #0bd solid;  
 }
 .desktop .question {
